<resources>
    <string name="app_name">PPAB-06_L0122018_Alyza Khoirun Nadif</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Characters</string>
    <string name="title_profile">Profile</string>

    <string name="nama_aplikasi">PPAB-06</string>
    <string name="sambutan">Sambutan</string>
    <string name="isi_sambutan">
    This program is a simple Android application that consists of two pages: the main page and the profile page.
    On the main page, there are two buttons: one button to navigate to the profile page and the other button to navigate to my GitHub link.
    On the profile page, there is information such as profile photo, name, student ID (NIM), major, year of enrollment, and a self-description.
    </string>
    <string name="go_to_profile">Go To Profile</string>
    <string name="go_to_my_github">Go To My Github</string>
    <string name="gambar_random">Gambar Random</string>
    <string name="deskripsi_diri">Deskripsi Diri</string>
    <string name="foto_profil">foto profil</string>
    <string name="share">Share</string>
    <string name="data_deskripsi">Hi, my name is Alyza Khoirun Nadif. Currently, I am in the fourth semester of the informatics program at Sebelas Maret University. I want to become a proficient programmer. The reason I want to become a programmer is that by mastering computers, we can create anything we want.</string>
    <string name="nim">L0122018</string>
    <string name="name">Alyza Khoirun Nadif</string>
    <string name="jurusan">Informatika, 2022</string>
    <string name="character_name">Character Name</string>
    <string name="description">Description</string>
    <string name="Title">Honkai Star Rail Characters</string>

    <string-array name="data_name">
        <item>Blade</item>
        <item>Boothill</item>
        <item>Bronya</item>
        <item>Clara</item>
        <item>Gepard</item>
        <item>Huohuo</item>
        <item>Jingliu</item>
        <item>Jingyuan</item>
        <item>Kafka</item>
        <item>Welt</item>
    </string-array>

    <string-array name="data_desc">
        <item><![CDATA[A member of the Stellaron Hunters, and a swordsman who abandoned his body to become a blade. Pledges loyalty to "Destiny's Slave," and possesses a terrifying self-healing ability.]]></item>
        <item><![CDATA[A cyborg cowboy drifting among the stars. Extremely optimistic and unrestrained.
                 He is a member of the Galaxy Rangers who swore to punish the wretched by any and all means.
                 His flamboyant and brash actions were all to draw the attention of the Interastral Peace Corporation — the target of his revenge.]]></item>
        <item><![CDATA[Heir apparent to the Supreme Guardian of Belobog.
                She possesses pride befitting of a princess, but also the determination and integrity of a soldier.]]></item>
        <item><![CDATA[A vagrant girl who lives with robots.
                She is introverted, gentle, and has a pure heart.
                She wishes for all Underworlders to become a family.]]></item>
        <item><![CDATA[A captain in the Silvermane Guards and an outstanding warrior of Belobog.
                He is meticulous and vigilant to the core and is always true to himself.]]></item>
        <item><![CDATA[A trainee Ten-Lords Commission Judge of the Xianzhou Luofu, she is a young Foxian girl possessed by a heliobus.
                She is a timid and weak girl who is afraid of all kinds of strange things, but is responsible for luring and subduing evil spirits.]]></item>
        <item><![CDATA[Former Sword Champion of the Luofu, and the creator of the Cloud Knights legends of undefeated might.
                Now, her name has been wiped from the records, and she is a traitor of the Xianzhou walking on the fine line between sanity and mara-struck.]]></item>
        <item><![CDATA[The Divine Foresight, one of the Seven Arbiter-Generals of the Xianzhou Alliance, leads the Cloud Knights of the Xianzhou Luofu.
                A student of the Luofus previous Sword Champion, though not known for his martial prowess.]]></item>
        <item><![CDATA[A member of the Stellaron Hunters. A dashing, collected, and professional beauty.
                Used the enchantment of Spirit Whisper to set up Trailblazer to absorb the Stellaron.
                Her hobby is shopping for and organizing her collection of coats.]]></item>
        <item><![CDATA[A seasoned member of the Express Crew.
                The passion buried in his heart burns anew as he enjoys this fresh adventure.
                Occasionally, he would sketch the experiences in a notebook.]]></item>
    </string-array>

    <integer-array name="data_img">
        <item>@drawable/blade</item>
        <item>@drawable/boothill</item>
        <item>@drawable/bronya</item>
        <item>@drawable/clara</item>
        <item>@drawable/gepard</item>
        <item>@drawable/huohuo</item>
        <item>@drawable/jingliu</item>
        <item>@drawable/jingyuan</item>
        <item>@drawable/kafka</item>
        <item>@drawable/welt</item>
    </integer-array>

</resources>