<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ppab_06_l0122018_alyzakhoirunnadif.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.ppab_06_l0122018_alyzakhoirunnadif.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_detail_item"
            app:destination="@id/navigation_detail_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ppab_06_l0122018_alyzakhoirunnadif.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_detail_item"
        android:name="com.example.ppab_06_l0122018_alyzakhoirunnadif.DetailItem"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail_item" />

</navigation>